[gd_scene load_steps=2 format=2]

[ext_resource path="res://Screens/Menu/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 412.0
margin_top = 111.0
margin_right = 612.0
margin_bottom = 489.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HostIP" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="YourIP" type="Label" parent="VBoxContainer/HostIP"]
margin_right = 49.0
margin_bottom = 14.0
text = "Your IP:"

[node name="IP" type="Label" parent="VBoxContainer/HostIP"]
margin_left = 53.0
margin_right = 200.0
margin_bottom = 14.0
size_flags_horizontal = 3
align = 2

[node name="RoomMaster" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RMIP" type="Label" parent="VBoxContainer/RoomMaster"]
margin_right = 93.0
margin_bottom = 14.0
text = "Room Master: "

[node name="Name" type="Label" parent="VBoxContainer/RoomMaster"]
margin_left = 97.0
margin_right = 200.0
margin_bottom = 14.0
size_flags_horizontal = 3
align = 2

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 200.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNames" type="Label" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 200.0
margin_bottom = 74.0
size_flags_horizontal = 3
text = "Players:"
align = 1

[node name="Player" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 200.0
margin_bottom = 378.0
rect_min_size = Vector2( 200, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="VBoxContainer/Player"]
margin_right = 200.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 7

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
